# ai-in-robotics-41118

./: Evaluate.py  Example.ipynb  README.md  Teleop.py  agents.py  average_rewards.csv  ddpg.py  detect.py  envs.py  measure.py  policy_network_e.pkl  replayBuffer_teleop.csv  replayBuffer_teleop_0.csv  replayBuffer_teleop_1.csv  replayBuffer_teleop_2.csv  replayBuffer_teleop_3.csv  replayBuffer_teleop_4.csv  replayBuffer_teleop_test.csv  replayBuffer_teleop_test_1.csv  replayBuffer_train_test.csv  requirements.txt  test.csv  test.py  train.ipynb
.devcontainer/: .bash_aliases  Dockerfile  devcontainer.json
ai-detect/exp10/: opt.yaml  results.csv
ai-sim/a3_skeleton/: CMakeLists.txt  package.xml
ai-sim/a3_skeleton/doc/: manifest.yaml
ai-sim/a3_skeleton/src/: CMakeLists.txt  main.cpp
ai-sim/a3_skeleton/src/Controller/: CMakeLists.txt  ackerman.cpp  ackerman.h  controller.cpp  controller.h  controllerinterface.h
ai-sim/a3_skeleton/src/Processing/: CMakeLists.txt  processing.cpp  processing.h
ai-sim/a3_skeleton/test/: CMakeLists.txt  detectionTest.cpp  obstacleTest.cpp  pathTest.cpp  utest.cpp
fsae/: detect.py  envs.py  track_generator.py
fsae/resources/: bluecone.urdf  car.py  cone.py  goal.py  yellowcone.urdf
fsae/resources/models/cone_blue/: cone_blue.urdf
replay_buffers/: replayBuffer_teleop_test.csv  replayBuffer_teleop_test_0.csv  replayBuffer_teleop_test_2.csv  replayBuffer_teleop_test_3.csv
resources/: cone.py
weights/best/: actor.pth  critic.pth  target_actor.pth  target_critic.pth
weights/last/: actor.pth  critic.pth  target_critic.pth
(+2 files in other folders)
